--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -9,7 +9,7 @@
     <images dir="pictures" web-path="writerside-github"/>
     <images dir="images" web-path="writerside-github"/>
     <instance src="m.tree" web-path="/m/"/>
-    <instance src="t.tree" web-path="/t/"/>
+    <instance src="test.tree" web-path="/t/"/>
     <instance src="auto.tree" version="1.0"/>
     <instance src="hi.tree" version="1.0"/>
     <build-config dir="configs"/>
