--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,11 +11,11 @@ permissions:
   pages: write
 
 env:
-  INSTANCE: 'Writerside2/test'
-  IS_GROUP: 'true'
-  DOCKER_VERSION: '2025.03.8312'
+  INSTANCE: 'Writerside2/auto'
+  IS_GROUP: 'false'
+  DOCKER_VERSION: '243.22562'
   ALGOLIA_APP_NAME: 'ERUSDW4898'
-  ALGOLIA_INDEX_NAME: 'index_GH_test'
+  ALGOLIA_INDEX_NAME: 'index_GH_auto'
   CONFIG_JSON_PRODUCT: 'AUTO'
   CONFIG_JSON_VERSION: '1.0'
   PDF: 'PDF.xml'
