--- a/Writerside2/writerside.cfg
+++ b/Writerside2/writerside.cfg
@@ -14,6 +14,7 @@
     <instance src="hi.tree" version="1.0"/>
     <build-config dir="configs"/>
     <settings>
+        <wrs-supernova use-version="latest"/>
         <id-generator-method>LOWER_CASE_DASHES_INTERNATIONAL</id-generator-method>
     </settings>
 </ihp>
